fix: name of input

--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ branding:
   color: 'purple'
 
 inputs:
-  destination:
+  destination-folder:
     description: the folder for the publised articles
     required: true
     default: ./blog
